--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,10 +16,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag birthbbot:$(date +%s)
+      run: docker build . --file Dockerfile --tag birthbbot:latest
       
     - name: Set up Docker Buildx
-      uses: docker/setup-build-action@v1
+      uses: docker/setup-buildx-action@v1
       
     - name: Login to DockerHub
       uses: docker/login-action@v1
