--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: GitHub Action for Slackbot
 
 on:
   push:
@@ -15,24 +15,25 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag birthbbot:latest
+    - name: Checkout
+      run: actions/checkout@v3
       
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
       
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Build and push
       uses: docker/build-push-action@v3
       with:
+        context: .
         push: true
-        tags: gwmelody/birth-slackbot:latest
+        tags: gwmelody/birthbot:latest
       
       
       
