--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
     - name: Checkout
-      run: actions/checkout@v3
-      
+      uses: actions/checkout@v3
+          
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
       
