--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
+    - name: Checkout source code
       uses: actions/checkout@v3
+      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
       
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
@@ -25,11 +28,8 @@ jobs:
         password: ${{ secrets.SECRET_TOKEN }}
         
     - name: Build and push
-      uses: docker/build-push-action@v3
+      uses: docker/build-push-action@v2
       with:
         context: .
         push: true
-        tags: gwmelody/birthbot:latest
-      
-      
-      
+        tags: ghcr.io/${{ github.actor }}/birthbot:latest
