--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
+        registry: ghcr.io
         context: .
         push: true
-        tags: ghcr.io/${{ github.actor }}/birthbot:latest
+        tags: gwmelody/birthbot:latest
