--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,7 @@ name: GitHub Action for Slackbot
 
 on:
   push:
-    branches: ["main", "ziwoo"]
-  pull_request:
-    branches: ["main", "ziwoo"]
+    branches: ["main"]
   workflow_dispatch:
 
 env:
@@ -46,3 +44,25 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+      
+      - name: Read Manifest Repo
+        uses: actions/checkout@v3
+        with:
+          repository: cloud-club/GitOps-ChucarBot-Manifest
+          ref: v3
+          token: ${{ secrets.GH_PAT }}
+    
+      - name: Change env values of cronjob manifest
+        uses: mikefarah/yq@master
+        with:
+          cmd: yq '.image.tag = "${{ steps.meta.outputs.tags }}"' 'birthbot-cronjob.yaml'
+      
+      - name: Push outputs to manifest repo
+        uses: cpina/github-action-push-to-another-repository@main
+        env:
+          token: ${{ secrets.GH_PAT }}
+        with:
+          destination-github-username: 'CYJ'
+          destination-repository-name: 'GitOps-ChucarBot-Manifest'
+          commit-message: Update image tag to version - ${{ steps.meta.outputs.version }}
+          target-branch: main
