--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: cloud-club/GitOps-ChucarBot-Manifest
-          ref: v3
+          ref: main
           token: ${{ secrets.GH_PAT }}
     
       - name: Change env values of cronjob manifest
