--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -60,9 +60,10 @@ jobs:
       - name: Push outputs to manifest repo
         uses: cpina/github-action-push-to-another-repository@main
         env:
-          token: ${{ secrets.GH_PAT }}
+          API_TOKEN_GITHUB: ${{ secrets.GH_PAT }}
         with:
-          destination-github-username: 'CYJ'
+          source-directory: '.'
+          destination-github-username: 'cloud-club'
           destination-repository-name: 'GitOps-ChucarBot-Manifest'
           commit-message: Update image tag to version - ${{ steps.meta.outputs.version }}
           target-branch: main
