--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,14 +35,15 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: ${{ github.GITHUB_SHA }}
+          tags: |
+            type=sha
 
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: ${{ github.GITHUB_SHA }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
       
       - name: Read Manifest Repo
@@ -55,7 +56,7 @@ jobs:
       - name: Change env values of cronjob manifest
         uses: mikefarah/yq@master
         with:
-          cmd: yq '.image.tag = "${{ github.GITHUB_SHA }}"' 'birthbot-cronjob.yaml'
+          cmd: yq '.image.tag = "${{ steps.meta.outputs.tags }}"' 'birthbot-cronjob.yaml'
       
       - name: Push outputs to manifest repo
         uses: cpina/github-action-push-to-another-repository@main
